(fix)css: Fixed issue with title overflowing page width on small screen

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,6 +26,10 @@ main {
   }
 }
 
+.display-3 {
+  font-size: min(10vw,4.5rem);
+}
+
 #nautical-chart {
   width: 100%;
   height: 300px;
